crates/wasm-cli/tests/snapshots/snapshot__packages_view_empty_snapshot.snap
---
source: crates/wasm-cli/tests/snapshot.rs
expression: output
---
┌ Filter ──────────────────────────────────────────────────────────────────────┐
│Press / to filter...                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
                               No packages stored.










 /  Filter   p  Pull   d  Delete   Enter  View details   Esc  Clear
